2004-12-13	Benedikt Meurer <benny@xfce.org>

	* configure.ac, Makefile.am, THANKS, po/en_GB.po, po/en_GB.gmo: Added
	  en_GB translations from Dwayne Bailey <dwayne@translate.org.za>.

2004-12-12	Benedikt Meurer <benny@xfce.org>

	* po/libexo.pot, po/de.po, po/de.gmo: Ran make update-po.

2004-12-09	Benedikt Meurer <benny@xfce.org>

	* configure.ac, exo.spec.in, Makefile.am: Added .spec file and
	  "rpm" target.

2004-12-06	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Sync with latest changes to GtkIconView, esp.
	  the accessibility support.
	* exo/exo-icon-bar.c: Icon bar rendering and sizing fixes.

2004-12-03	Benedikt Meurer <benny@xfce.org>

	* configure.ac: Bump version to 0.2.1svn.

2004-12-02	Benedikt Meurer <benny@xfce.org>

	* exo/exo-xsession-client.c: Added "restart-command" property.
	* exo/exo-pango-extensions.c: Updated gtk-doc.
	* docs/: Updated API documentation.
	* po/libexo.pot, po/de.po, po/de.gmo: Updated translations.
	* configure.ac, NEWS: Version 0.2.0.

2004-12-01	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c, exo/exo-icon-view.h, docs/: Added documentation
	  for the ExoIconView class.

2004-11-30	Benedikt Meurer <benny@xfce.org>

	* exo/: Copyright corrections.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* NEWS, po/de.po, po/de.gmo: Fix version number.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* po/libexo.pot: Updated.
	* po/de.po, po/de.gmo: Completed the german translations.
	* exo/exo-binding.c, exo/exo-binding.h: Avoid recursing in notify
	  handlers for mutual bindings by blocking the destination handler.
	* configure.ac, NEWS: Version 0.2.0pre2.

2004-11-28	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.h: Added 4 padding fields to ExoIconViewClass
	  for future expansion.
	* exo/exo-md5.h, exo/exo-md5.c: Changed the API to be compatible
	  with libgnome/libegg.
	* docs/: Updated API documentation.

2004-11-27	Benedikt Meurer <benny@xfce.org>
