@@ -24,3 +24,5 @@ EXTRA_DIST =								\
 	exo.spec
 
 ACLOCAL_AMFLAGS = -I m4
+
+DISTCHECK_CONFIGURE_FLAGS = --enable-gtk-doc
