@@ -1,6 +1,7 @@
 0.2.1svn
 ========
 - The icon bar is now sized and rendered properly with all Gtk+ theme engines.
+- New translations: Dwayne Bailey (en_GB)
 
 
 0.2.0
