@@ -1,3 +1,8 @@
+2004-12-23	Benedikt Meurer <benny@xfce.org>
+
+	* gtk-doc.make, exo/Makefile.am: Get 'make dist' to work from a
+	  clean checkout.
+
 2004-12-13	Benedikt Meurer <benny@xfce.org>
 
 	* configure.ac, Makefile.am, THANKS, po/en_GB.po, po/en_GB.gmo: Added
